abort button fix

--- a/src/app/components/event-type/event-type.component.html
+++ b/src/app/components/event-type/event-type.component.html
@@ -134,7 +134,7 @@
 <p>Are you sure that you want to proceed?</p>
 <ng-template pTemplate="footer">
     <p-button icon="pi pi-check" (click)="displayBasic=false" label="Confirm" styleClass="p-button-text"></p-button>
-    <p-button icon="pi pi-times" (click)="displayBasic=false" label="Abort" styleClass="p-button-text"></p-button>
+    <p-button icon="pi pi-times" (click)="closeEventTypeDialog()" label="Abort" styleClass="p-button-text"></p-button>
 
 </ng-template>
 </p-dialog>
