--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -194,3 +194,28 @@
       (click)="saveEvent()"></button>
     </ng-template>
   </p-dialog>
+
+  <p-dialog [(visible)]="deleteEventDialog" header="Confirm" [modal]="true" [style]="{width:'40%'}">
+    <div class="flex align-items-center justify-content-center">
+      <i class="pi pi-exclamation-triangle mr-3" style="font-size: 2rem"></i>
+      <span *ngIf="event">Are you sure you want to delete <b>{{event?.title }}</b>?</span>
+    </div>
+    <ng-template pTemplate="footer">
+      <button pButton pRipple icon="pi pi-times" class="p-button-text" label="No"
+        (click)="deleteEventDialog = false"></button>
+      <button pButton pRipple icon="pi pi-check" class="p-button-text" label="Yes" (click)="confirmDelete()"></button>
+    </ng-template>
+  </p-dialog>
+  
+  <!--------delete selection dialog------- -->
+  <p-dialog [(visible)]="deleteEventsDialog" header="Confirm" [modal]="true" [style]="{width:'40%'}">
+    <div class="flex align-items-center justify-content-center">
+      <i class="pi pi-exclamation-triangle mr-3" style="font-size: 2rem"></i>
+      <span>Are you sure you want to delete the selected events?</span>
+    </div>
+    <ng-template pTemplate="footer">
+      <button pButton pRipple icon="pi pi-times" class="p-button-text" label="No"
+        (click)="deleteEventsDialog = false"></button>
+      <button pButton pRipple icon="pi pi-check" class="p-button-text" label="Yes" (click)="confirmDeleteSelected()"></button>
+    </ng-template>
+  </p-dialog>
