--- a/src/app/components/club/club.component.scss
+++ b/src/app/components/club/club.component.scss
@@ -145,6 +145,6 @@
 
   .carta:hover{
 
-    background-color: rgba(37, 18, 247, 0.158);
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2), 0 0 10px 0 rgba(0, 0, 0, 0.19);
     cursor: pointer;
   }
