--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,26 +1,46 @@
+<p-toast></p-toast>
 <div class="surface-0 flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden">
     <div class="grid justify-content-center p-2 lg:p-0" style="min-width:80%">
     <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
+        
         <div class="text-center mb-5">
+          <a href="/" >
             <img src="assets/images/4c.png" alt="Image" height="50" class="mb-3">
+            </a>
             <div class="text-900 text-3xl font-medium mb-3">Welcome Back</div>
             <span class="text-600 font-medium line-height-3">Don't have an account?</span>
-            <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Create today!</a>
+            <a (click)="onRegister()" class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Create today!</a>
         </div>
-        <div>
-            <label for="email1" class="block text-900 font-medium mb-2">Email</label>
-            <input id="email1" type="text" pInputText class="w-full mb-3">
-            <label for="password1" class="block text-900 font-medium mb-2">Password</label>
-            <input id="password1" type="password" pInputText class="w-full mb-3">
-            <div class="flex align-items-center justify-content-between mb-6">
-                <div class="flex align-items-center">
-                    <p-checkbox id="rememberme1" [binary]="true" styleClass="mr-2"></p-checkbox>
-                    <label for="rememberme1">Remember me</label>
-                </div>
-                <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Forgot password?</a>
+        <div class="w-full md:w-10 mx-auto">
+            <label for="username" class="block text-900 text-xl font-medium mb-2">Username</label>
+            <div class="p-inputgroup">
+              <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+              <input id="username" [(ngModel)]="username" (keyup.enter)="onSubmit()" type="text" placeholder="Username" pInputText class="w-full " style="padding:1rem;">
             </div>
-            <button pButton pRipple label="Sign In" icon="pi pi-user" class="w-full"></button>
+
+
+            <label for="password" class="block text-900 font-medium text-xl mb-2 mt-3">Password</label>
+            <div class="p-inputgroup mb-3">
+              <span class="p-inputgroup-addon"><i class="pi pi-key"></i></span>
+
+            <p-password [feedback]="false" id="password" (keyup.enter)="onSubmit()" [(ngModel)]="password" placeholder="Password" [toggleMask]="true" styleClass="w-full"></p-password>
+
+          </div>
+            <div class="flex align-items-right justify-content-between mb-5 ">
+                <div class="flex">
+
+                </div>
+                <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer" (click)="resetPassword()">Forgot password?</a>
+
+            </div>
+
+            <button pButton pRipple label="Sign In" (click)="onSubmit()" icon="pi pi-sign-in" class="w-full" [ngStyle]="{backgroundColor:'var(--blue-700)'}"></button>
+            <div [hidden]="badCred == null" class="w-full mt-2" >
+
+            </div>
         </div>
+       
     </div>
+    
     </div>
 </div>
