--- a/src/app/components/club/club.component.html
+++ b/src/app/components/club/club.component.html
@@ -21,42 +21,42 @@
                 <span class="p-input-icon-left mb-2 md:mb-0">
                     <i class="pi pi-search"></i>
                     <!--(input)="dv.filter($event.target.value)"-->
-                    <input type="search" pInputText placeholder="Rechercher par Nom" >
+                    <input type="search" pInputText placeholder="Search.." >
                 </span>
                 <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
             </div>
         </ng-template>
-        <!-- <ng-template let-club pTemplate="listItem">
+        <ng-template let-club pTemplate="listItem">
             <div class="col-12">
                 <div class="product-list-item">
-                    <img [src]="'assets/showcase/images/demo/product/' + product.image" [alt]="club.name"/>
+                    <img *ngIf="club?.logo" [src]="getSrcFromCustomFile(club)" width="200px" height="150px" [alt]="club?.logo.fileName"/>
+                    <img *ngIf="!club?.logo" src="./assets/images/Profile_placeholder.png" width="150px" height="150px" alt="" class="circular_image"/>
                     <div class="product-list-detail">
-                        <div class="product-name">{{club.name}}</div>
-                        <div class="product-description">{{club.status}}</div>
-                        <p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating>
-                        <i class="pi pi-tag product-category-icon"></i><span class="product-category">{{product.category}}</span>
+                        <div class="product-name mb-4">{{club?.name}}</div>
+                        <div class="product-description">{{club?.description}}</div>
+                        <!-- <p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating> -->
+                        <i class="pi pi-building product-category-icon"></i><span class="product-category">{{club?.leader.grade.department.name}}</span>
                     </div>
                     <div class="product-list-action">
-                        <span class="product-price">${{product.price}}</span>
-                        <p-button icon="pi pi-shopping-cart" label="Add to Cart" [disabled]="product.inventoryStatus === 'OUTOFSTOCK'"></p-button>
-                        <span [class]="'product-badge status-' + product.inventoryStatus.toLowerCase()">{{product.inventoryStatus}}</span>
+                        <!-- <span class="product-price">${{product.price}}</span> -->
+                        <p-button icon="pi pi-eye" label="View" (click)="toClub(club)" ></p-button>
+                        <!-- <span [class]="'product-badge status-' + product.inventoryStatus.toLowerCase()">{{product.inventoryStatus}}</span> -->
                     </div>
                 </div>
             </div>
-        </ng-template> -->
+        </ng-template>
         <ng-template let-club pTemplate="gridItem">
-            <div class="col-12 md:col-4">
+            <div class="col-12 md:col-3">
                 <div class="product-grid-item card carta" (click)="toClub(club)">
                     <div class="product-grid-item-top">
                         <div>
                             <i class="pi pi-building product-category-icon"></i>
-                            <span class="product-category">{{club?.department?.name}}</span>
+                            <span class="product-category">{{club?.leader.grade.department.name}}</span>
                         </div>
                         <span [class]="'product-badge status-' + club?.status">{{club?.status}}</span>
                     </div>
                     <div class="product-grid-item-content">
-                        <p-image *ngIf="club?.logo" [src]="getSrcFromCustomFile(club)" alt="" width="100%" height="200%" [preview]="true"></p-image>
-                        <img *ngIf="club?.logo" [src]="getSrcFromCustomFile(club)" [alt]="club?.logo.fileName"/>
+                        <img *ngIf="club?.logo" [src]="getSrcFromCustomFile(club)" width="100px" height="200px" [alt]="club?.logo.fileName"/>
                         <img *ngIf="!club?.logo" src="./assets/images/Profile_placeholder.png" alt="" class="circular_image"/>
 
                         <div class="product-name">{{club?.name}}</div>
