--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -15,7 +15,7 @@
                         </a>
                     </li>
                     <li>
-                        <a (click)="router.navigate(['/pages/landing'], {fragment: 'features'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                        <a (click)="router.navigate(['/about'])" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                             <span>About</span>
                         </a>
                     </li>
@@ -25,14 +25,23 @@
                         </a>
                     </li>
                     <li>
-                        <a (click)="router.navigate(['/pages/landing'], {fragment: 'pricing'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                        <a (click)="router.navigate(['/event'])" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                             <span>Events</span>
                         </a>
                     </li>
                 </ul>
                 <div class="flex justify-content-between lg:block border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0">
-                    <button (click)="login()" pButton pRipple label="Login" class="p-button-text p-button-rounded border-none font-light line-height-2 text-blue-500"></button>
-                    <button (click)="register()" pButton pRipple label="Register" class="p-button-rounded border-none ml-5 font-light line-height-2 bg-blue-500 text-white"></button>
+                    <div [hidden]="this.authenticationService.isLoggedIn()">
+                        <button (click)="login()" pButton pRipple label="Login" class="p-button-text p-button-rounded border-none font-light line-height-2 text-blue-500"></button>
+                        <button (click)="register()" pButton pRipple label="Register" class="p-button-rounded border-none ml-5 font-light line-height-2 bg-blue-500 text-white"></button> 
+
+                    </div>
+
+                    <div [hidden]="!this.authenticationService.isLoggedIn()">
+                        <p-button #btn (click)="menu.toggle($event)" icon="pi pi-user" styleClass="p-button-lg p-button-rounded p-button-plain p-button-text"></p-button>
+                        <p-tieredMenu #menu [model]="profileItems" [popup]="true"></p-tieredMenu>
+                    </div>
+                    
                 </div>
             </div>
         </div>
