--- a/src/app/components/role/role.component.html
+++ b/src/app/components/role/role.component.html
@@ -1,132 +1,45 @@
-<p-toast></p-toast>
-<div class="grid">
-  <div class="col-12">
-    <div class="card">
-      <p-toolbar styleClass="mb-1">
-        <ng-template pTemplate="left">
-          <div class="my-2">
-            <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success mr-2"
-              (click)="openNew()"></button>
-            <button pButton pRipple label="Delete" icon="pi pi-trash" class="p-button-danger"
-              (click)="deleteSelectedRoles()" [disabled]="!selectedRoles|| !selectedRoles?.length"></button>
-          </div>
-        </ng-template>
-      </p-toolbar>
-      <p-table #dt [value]="roles" responsiveLayout="scroll"
-        [globalFilterFields]="['name']" [rows]="10" [paginator]="true" [rowsPerPageOptions]="[10,20,30]"
-        [showCurrentPageReport]="true" currentPageReportTemplate="Affichage {first} à {last} de {totalRecords} entrées"
-        [(selection)]="selectedRoles" selectionMode="multiple" [rowHover]="true" dataKey="id">
-        <ng-template pTemplate="caption">
-          <div class="flex flex-column md:flex-row md:justify-content-between md:align-items-center">
-            <h5 class="m-0">Manage Roles</h5>
-            <span class="block mt-2 md:mt-0 p-input-icon-left">
-              <i class="pi pi-search"></i>
-              <input pInputText Item="text" (input)="dt.filterGlobal($event.target.value, 'contains')"
-                placeholder="Search..."/>
-            </span>
-          </div>
-        </ng-template>
-        <ng-template pTemplate="header">
-          <tr>
-            <th style="width: 3rem">
-              <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
-            </th>
-            <th pSortableColumn="name"><div class="flex justify-content-center">Name<p-sortIcon field="name"></p-sortIcon></div></th>
-            <th></th>
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-role>
-          <tr>
-            <tr>
-              <td>
-                  <p-tableCheckbox [value]="role"></p-tableCheckbox>
-              </td>
-              <td style="width:50%; min-width:10rem;">
-                  <span class="p-column-title">name</span>
-                  <div class="flex justify-content-center text-center">{{role?.name}}</div>
-              </td>
-              <td style="width:30%; min-width:10rem;">
-                  <div class="flex justify-content-center text-center">
-                      <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-info mr-2"
-                      (click)="editRole(role)"></button>
-                        <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger"
-                      (click)="deleteRole(role)"></button>
+
+       <div class="surface-section px-4 py-8 md:px-6 lg:px-8">
+        <div class="text-700 text-center">
+            <!-- <div class="text-blue-600 font-bold mb-3"><i class="pi pi-discord"></i>&nbsp;POWERED BY DISCORD</div> -->
+            <div class="text-900 font-bold text-5xl mb-3">ROLES</div>
+            <div class="text-700 text-2xl mb-5">Application roles are static and cannot be modified.</div>
+        </div>
+    </div>
+            
+    <div class="surface-ground px-4 py-5 md:px-6 lg:px-8">
+      <div class="grid">
+          <div class="col-12 md:col-6 lg:col-6">
+              <div class="surface-card shadow-2 p-3 border-round">
+                  <div class="flex justify-content-between mb-3">
+                      <div>
+                          <span class="block text-500 font-medium mb-3">Role 1°</span>
+                          <div class="text-900 font-medium text-xl">ADMIN</div>
+                      </div>
+                      <div class="flex align-items-center justify-content-center bg-blue-100 border-round" style="width:2.5rem;height:2.5rem">
+                          <i class="pi pi-shield text-blue-500 text-xl"></i>
+                      </div>
                   </div>
-                </td>
-          </tr>
-        </ng-template>
-        <!-- empty table message-->
-        <ng-template pTemplate="emptymessage">
-          <tr>
-            <td colspan="6" class="text-center">No Roles found.</td>
-          </tr>
-        </ng-template>
-      </p-table>
-    </div>
+                  <!-- <span class="text-green-500 font-medium">24 new </span> -->
+                  <span class="text-500">Manage all the application features.</span>
+              </div>
+          </div>
+          <div class="col-12 md:col-6 lg:col-6">
+            <div class="surface-card shadow-2 p-3 border-round">
+                <div class="flex justify-content-between mb-3">
+                    <div>
+                        <span class="block text-500 font-medium mb-3">Role 2°</span>
+                        <div class="text-900 font-medium text-xl">LEADER</div>
+                    </div>
+                    <div class="flex align-items-center justify-content-center bg-purple-100 border-round" style="width:2.5rem;height:2.5rem">
+                        <i class="pi pi-user text-purple-500 text-xl"></i>
+                    </div>
+                </div>
+                <!-- <span class="text-green-500 font-medium">85 </span> -->
+                <span class="text-500">Manage a club and its events.</span>
+            </div>
+        </div>
+          
+          
+      </div>
   </div>
-</div>
-
-  <p-dialog header="Role Details" [(visible)]="roleDialog" [modal]="true"
-    [style]="{width: '70%'}" class="p-fluid">
-    <div class="text-500 mb-5">Please complete all required fields marked with an asterisk (*).</div>
-    <ng-template pTemplate="content">
-    <form [formGroup]="roleForm" class="grid">
-      <!-- ---hidden--- -->
-      <div class="field">
-        <input Item="text" hidden pInputText id="code" formControlName="id" />
-      </div>
-
-      <div class="field col-12">
-        <label for="name">Title *</label>
-        <input Item="text" pInputText id="name" formControlName="name" placeholder="Role Name" required />
-        <div *ngIf="(roleForm.get('name').invalid && roleForm.get('name').dirty)">
-          <small class="ng-dirty ng-invalid" *ngIf="roleForm.get('name').hasError('required')">
-            Name is required.
-          </small>
-          <small class="ng-dirty ng-invalid" *ngIf="roleForm.get('name').hasError('pattern')">
-            Not Valid.
-          </small>
-        </div>
-      </div>
-      <div class="field col-12">
-        <label for="description">Description *</label>
-        <textarea id="description" rows="5" cols="30" pInputTextarea [autoResize]="true" formControlName="description"></textarea>
-        <div *ngIf="(roleForm.get('description').invalid && roleForm.get('description').dirty)">
-          <small class="ng-dirty ng-invalid" *ngIf="roleForm.get('description').hasError('required')">Description is required.</small>
-        </div>
-      </div>
-    </form>
-    </ng-template>
-    <ng-template pTemplate="footer">
-        <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
-    <button pButton pRipple label="Save" [disabled]="roleForm.invalid" icon="pi pi-check" class="p-button-text"
-      (click)="saveRole()"></button>
-    </ng-template>
-  </p-dialog>
-
-
-  <p-dialog [(visible)]="deleteRoleDialog" header="Confirm" [modal]="true" [style]="{width:'50%'}">
-    <div class="flex align-items-center justify-content-center">
-      <i class="pi pi-exclamation-triangle mr-3" style="font-size: 2rem"></i>
-      <span *ngIf="role">Are you sure you want to delete <b>{{role?.name}}</b>?</span>
-    </div>
-    <ng-template pTemplate="footer">
-      <button pButton pRipple icon="pi pi-times" class="p-button-text" label="No"
-        (click)="deleteRoleDialog = false"></button>
-      <button pButton pRipple icon="pi pi-check" class="p-button-text" label="Yes" (click)="confirmDelete()"></button>
-    </ng-template>
-  </p-dialog>
-  
-  <!--------delete selection dialog------- -->
-  <p-dialog [(visible)]="deleteRolesDialog" header="Confirm" [modal]="true" [style]="{width:'50%'}">
-    <div class="flex align-items-center justify-content-center">
-      <i class="pi pi-exclamation-triangle mr-3" style="font-size: 2rem"></i>
-      <span>Are you sure you want to delete the selected roles?</span>
-    </div>
-    <ng-template pTemplate="footer">
-      <button pButton pRipple icon="pi pi-times" class="p-button-text" label="No"
-        (click)="deleteRolesDialog = false"></button>
-      <button pButton pRipple icon="pi pi-check" class="p-button-text" label="Yes"
-        (click)="confirmDeleteSelected()"></button>
-    </ng-template>
-  </p-dialog>
