--- a/src/app/components/club/club.component.html
+++ b/src/app/components/club/club.component.html
@@ -40,6 +40,10 @@
                     <div class="product-list-action">
                         <!-- <span class="product-price">${{product.price}}</span> -->
                         <p-button icon="pi pi-eye" label="View" (click)="toClub(club)" ></p-button>
+
+                        <p-tag *ngIf="club?.status == true" styleClass="mr-2" icon="pi pi-check" severity="success" value="Active"></p-tag>
+                        <p-tag *ngIf="club?.status == null" styleClass="mr-2" icon="pi pi-clock" severity="warning" value="Under Review"></p-tag>
+                        <p-tag *ngIf="club?.status == false" icon="pi pi-times" severity="danger" value="Inactive"></p-tag>
                         <!-- <span [class]="'product-badge status-' + product.inventoryStatus.toLowerCase()">{{product.inventoryStatus}}</span> -->
                     </div>
                 </div>
@@ -64,8 +68,9 @@
                         <!-- <p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating> -->
                     </div>
                     <div class="product-grid-item-bottom">
-                        <!-- <span class="product-price">${{product.price}}</span>
-                        <p-button icon="pi pi-shopping-cart" [disabled]="product.inventoryStatus === 'OUTOFSTOCK'"></p-button> -->
+                        <p-tag *ngIf="club?.status == true" styleClass="mr-2" icon="pi pi-check" severity="success" value="Active"></p-tag>
+                        <p-tag *ngIf="club?.status == null" styleClass="mr-2" icon="pi pi-clock" severity="warning" value="Under Review"></p-tag>
+                        <p-tag *ngIf="club?.status == false" icon="pi pi-times" severity="danger" value="Inactive"></p-tag>
                     </div>
                 </div>
             </div>
