--- a/src/app/components/landing/landing-club/landing-club.component.html
+++ b/src/app/components/landing/landing-club/landing-club.component.html
@@ -4,9 +4,9 @@
         <div class="grid grid-nogutter lg:px-8 surface-section text-800">
             <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center ">
                 <section>
-                    <span class="block text-6xl font-bold mb-1">Create the screens your</span>
-                    <div class="text-6xl text-primary font-bold mb-3">your visitors deserve to see</div>
-                    <p class="mt-0 mb-4 text-700 line-height-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <span class="block text-6xl font-bold mb-1">Bring close your community</span>
+                    <div class="text-6xl text-primary font-bold mb-3">Create your Club!</div>
+                    <p class="mt-0 mb-4 text-700 line-height-3">Do not follow where the path may lead. Go instead where there is no path and leave a trail.</p>
                 </section>
             </div>
             <div class="col-12 md:col-6 overflow-hidden">
@@ -18,11 +18,19 @@
     <div class="grid justify-content-center">
         <div class="col-12 text-center mt-8 mb-4">
             <h2 class="text-900 font-normal mb-2">Active Clubs</h2>
-            <span class="text-600 text-2xl">Placerat in egestas erat...</span>
+            <!-- <span class="text-600 text-2xl">Placerat in egestas erat...</span> -->
         </div>
 
-        <div *ngFor="let club of clubs" class="col-12 md:col-12 lg:col-4 p-0 lg:pb-5 mt-4 lg:mt-0">
-            <div style="height:160px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(145, 226, 237, 0.2), rgba(172, 180, 223, 0.2)), linear-gradient(180deg, rgba(172, 180, 223, 0.2), rgba(246, 158, 188, 0.2));">
+        <div *ngFor="let club of clubs" class="col-3">
+            <p-card header="{{club?.name}}" subheader="{{club?.leader.grade.department.title}}" [style]="{width: '250px'}" styleClass="p-card-shadow">
+                <ng-template pTemplate="header">
+                    <img *ngIf="club?.logo != null" alt="Card" [src]="getSrcFromCustomFile(club)">
+                    <img *ngIf="club?.logo == null" alt="Card" src="assets/images/4c.png">
+
+                </ng-template>
+                <p>{{club?.description}}</p>
+            </p-card>
+            <!-- <div style="height:160px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(145, 226, 237, 0.2), rgba(172, 180, 223, 0.2)), linear-gradient(180deg, rgba(172, 180, 223, 0.2), rgba(246, 158, 188, 0.2));">
                 <div class="p-3 surface-card h-full" style="border-radius:8px;">
                     <div class="flex align-items-center justify-content-center bg-indigo-200" style="width:3.5rem;height:3.5rem; border-radius:10px;">
                         <i class="pi pi-fw pi-map text-2xl text-indigo-700"></i>
@@ -30,7 +38,7 @@
                     <h5 class="mb-2 text-900">{{club?.name}}</h5>
                     <span class="text-600">{{club?.description}}</span>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <div class="col-12 mt-8 mb-8 p-2 md:p-8" style="border-radius:20px; background:linear-gradient(0deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), radial-gradient(77.36% 256.97% at 77.36% 57.52%, #EFE1AF 0%, #C3DCFA 100%);">
