--- a/src/app/components/leader components/myevents/myevents.component.html
+++ b/src/app/components/leader components/myevents/myevents.component.html
@@ -1,12 +1,247 @@
-
-    <div class="grid grid-nogutter surface-section text-800">
-        <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center ">
-            <section>
-                <span class="block text-6xl font-bold mb-1 mt-4">Events will be available once your club is</span>
-                <div class="text-6xl text-green-600 font-bold mb-3">Verified</div>
-            </section>
-        </div>
-        <div class="col-12 md:col-6 overflow-hidden">
-            <img src="assets/images/event.jpg" alt="Image" class="md:ml-auto block md:h-full" style="clip-path: polygon(8% 0, 100% 0%, 100% 100%, 0 100%)">
-        </div>
+<p-toast></p-toast>
+<div class="grid grid-nogutter surface-section text-800">
+    <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center ">
+        <section>
+            <span class="block text-6xl font-bold mb-1 mt-4">Events will be available once your club is</span>
+            <div class="text-6xl text-green-600 font-bold mb-3">Verified</div>
+        </section>
     </div>
+    <div class="col-12 md:col-6 overflow-hidden">
+        <img src="assets/images/event.jpg" alt="Image" class="md:ml-auto block md:h-full" style="clip-path: polygon(8% 0, 100% 0%, 100% 100%, 0 100%)">
+    </div>
+</div>
+<div class="grid">
+  <div class="col-12">
+
+    <div class="card">
+
+      <p-toolbar styleClass="mb-1">
+        <ng-template pTemplate="left">
+          <div class="my-2">
+            <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success mr-2"
+              (click)="openNew()"></button>
+            <button pButton pRipple label="Delete" icon="pi pi-trash" class="p-button-danger"
+              (click)="deleteSelectedEvents()" [disabled]="!selectedEvents || !selectedEvents?.length"></button>
+          </div>
+        </ng-template>
+      </p-toolbar>
+
+      <p-table #dt [value]="club?.events" responsiveLayout="scroll"
+        [globalFilterFields]="['title']" [rows]="10" [paginator]="true" [rowsPerPageOptions]="[10,20,30]"
+        [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+        [(selection)]="selectedEvents" selectionMode="multiple" [rowHover]="true" dataKey="id">
+        <ng-template pTemplate="caption">
+          <div class="flex flex-column md:flex-row md:justify-content-between md:align-items-center">
+            <h5 class="m-0">Manage Events</h5>
+            <span class="block mt-2 md:mt-0 p-input-icon-left">
+              <i class="pi pi-search"></i>
+              <input pInputText Item="text" (input)="dt.filterGlobal($event.target.value, 'contains')"
+                placeholder="Search..."/>
+            </span>
+          </div>
+        </ng-template>
+        <ng-template pTemplate="header">
+          <tr>
+            <th style="width: 3rem">
+              <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+            </th>
+            <th pSortableColumn="title"><div class="flex justify-content-center">Title<p-sortIcon field="title"></p-sortIcon></div></th>
+            <th pSortableColumn="eventDate"><div class="flex justify-content-center">Start Date<p-sortIcon field="eventDate"></p-sortIcon></div>
+            </th>
+            <th pSortableColumn="endDate"><div class="flex justify-content-center">End Date<p-sortIcon field="endDate"></p-sortIcon></div>
+            </th>
+            <th pSortableColumn="place"><div class="flex justify-content-center">Location<p-sortIcon field="place"></p-sortIcon></div>
+            </th>
+            <th pSortableColumn="participantsEstimation"><div class="flex justify-content-center">Participants Estimation<p-sortIcon field="participantsEstimation"></p-sortIcon></div>
+            </th>
+            <th pSortableColumn="eventType"><div class="flex justify-content-center">Type<p-sortIcon field="eventType"></p-sortIcon></div>
+            <th pSortableColumn="status"><div class="flex justify-content-center">Status<p-sortIcon field="status"></p-sortIcon></div>
+
+            </th>
+            <th></th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-event>
+          <tr>
+            <tr>
+              <td>
+                  <p-tableCheckbox [value]="event"></p-tableCheckbox>
+              </td>
+              <td style="width:20%; min-width:10rem;">
+                  <span class="p-column-title">title</span>
+                  <div class="flex justify-content-center text-center">{{event?.title}}</div>
+              </td>
+              <td style="width:20%; min-width:10rem;">
+                <span class="p-column-title">eventDate</span>
+                <div class="flex justify-content-center text-center">{{event?.eventDate | date : "MM/dd/yy"}}</div>
+              </td>
+              <td style="width:20%; min-width:10rem;">
+                    <span class="p-column-title">endDate</span>
+                    <div class="flex justify-content-center text-center">{{ event?.endDate | date : "MM/dd/yy" }}</div>
+              </td>
+            <td style="width:20%; min-width:10rem;">
+                    <span class="p-column-title">place</span>
+                    <div class="flex justify-content-center text-center">{{event?.place}}</div>
+            </td>
+            <td style="width:20%; min-width:10rem;">
+                    <span class="p-column-title">participantsEstimation</span>
+                    <div class="flex justify-content-center text-center">{{event?.participantsEstimation}}</div>
+            </td>
+            <td style="width:20%; min-width:10rem;">
+                <span class="p-column-title">eventType</span>
+                <div class="flex justify-content-center text-center">{{event?.eventType.title}}</div>
+            </td>
+            <td style="width:20%; min-width:10rem;">
+              <span class="p-column-title">Status</span>
+              <div class="flex justify-content-center text-center">
+                <p-tag *ngIf="event?.status == true" styleClass="mr-2" icon="pi pi-check" severity="success" value="Approved"></p-tag>
+                <p-tag *ngIf="event?.status == null" styleClass="mr-2" icon="pi pi-clock" severity="warning" value="Under Review"></p-tag>
+                <p-tag *ngIf="event?.status == false" icon="pi pi-times" severity="danger" value="Rejected"></p-tag>
+              </div>
+            </td>
+              <td style="width:30%; min-width:10rem;">
+                  <div class="flex justify-content-center text-center">
+                      <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-info mr-2"
+                      (click)="editEvent(event)"></button>
+                        <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger"
+                      (click)="deleteEvent(event)"></button>
+                  </div>
+                </td>
+          </tr>
+        </ng-template>
+        <!-- empty table message-->
+        <ng-template pTemplate="emptymessage">
+          <tr>
+            <td colspan="6" class="text-center">No Event found.</td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </div>
+  </div>
+</div>
+
+<p-dialog header="Event Details" [(visible)]="eventDialog" [modal]="true"
+    [style]="{width: '70%'}" class="p-fluid">
+    <div class="text-500 mb-5">Please complete all required fields marked with an asterisk (*).</div>
+    <ng-template pTemplate="content">
+    <form [formGroup]="eventForm" class="grid">
+      <!-- ---hidden--- -->
+      <div class="field">
+        <input Item="text" hidden pInputText id="code" formControlName="id" />
+      </div>
+
+      <div class="field col-12">
+        <label for="title">Title *</label>
+        <input Item="text" pInputText id="title" formControlName="title" placeholder="Title" required />
+        <!-- <div *ngIf="(teacherForm.get('cin').invalid && teacherForm.get('cin').dirty)">
+          <small class="ng-dirty ng-invalid" *ngIf="teacherForm.get('cin').hasError('required')">
+            Obligatory.
+          </small>
+          <small class="ng-dirty ng-invalid" *ngIf="teacherForm.get('cin').hasError('pattern')">
+            Invalid.
+          </small>
+        </div> -->
+      </div>
+      <div class="field col-12">
+        <label for="type">Type</label>
+    <p-dropdown [options]="eventTypes" formControlName="type" placeholder="Select a type" optionLabel="title" [showClear]="true"></p-dropdown>
+        
+      </div>
+
+      <div class="field col-12">
+        <label for="description">Description *</label>
+        <input Item="text" pInputText id="description" formControlName="description" placeholder="description" required />
+        <!-- <div *ngIf="(teacherForm.get('firstName').invalid && teacherForm.get('firstName').dirty)">
+          <small class="ng-dirty ng-invalid" *ngIf="teacherForm.get('firstName').hasError('required')">
+            Obligatory.
+          </small>
+          <small class="ng-dirty ng-invalid" *ngIf="teacherForm.get('firstName').hasError('pattern')">
+            Invalid.
+          </small>
+        </div> -->
+      </div>
+
+      <div class="field col-6">
+        <label for="eventDate">Start Date *</label>
+        <p-calendar id="eventDate" appendTo="body" [showIcon]="true" dateFormat="dd/mm/yy" [showButtonBar]="true" placeholder="jj/MM/aaaa"
+                  formControlName="eventDate"></p-calendar>
+        <!-- <div *ngIf="(teacherForm.get('dob').invalid && teacherForm.get('dob').dirty)">
+          <small class="ng-dirty ng-invalid" *ngIf="teacherForm.get('dob').hasError('required')">
+            Obligatory.
+          </small>
+          <small class="ng-dirty ng-invalid" *ngIf="teacherForm.get('dob').hasError('pattern')">
+            Invalid.
+          </small>
+        </div> -->
+      </div>
+
+      <div class="field col-6">
+        <label for="endDate">End Date *</label>
+        <p-calendar id="endDate" appendTo="body" [showIcon]="true" dateFormat="dd/mm/yy" [showButtonBar]="true" placeholder="jj/MM/aaaa"
+                  formControlName="endDate"></p-calendar>
+        <!-- <div *ngIf="(teacherForm.get('gender').invalid && teacherForm.get('gender').dirty)">
+          <small class="ng-dirty ng-invalid" *ngIf="teacherForm.get('dob').hasError('required')">
+            Obligatory.
+          </small>
+        </div> -->
+      </div>
+
+      <div class="field col-8">
+        <label for="place">Location *</label>
+        <input Item="text" pInputText id="place" formControlName="place" placeholder="Place of event" required />
+        <!-- <div *ngIf="(teacherForm.get('firstName').invalid && teacherForm.get('firstName').dirty)">
+          <small class="ng-dirty ng-invalid" *ngIf="teacherForm.get('firstName').hasError('required')">
+            Obligatory.
+          </small>
+          <small class="ng-dirty ng-invalid" *ngIf="teacherForm.get('firstName').hasError('pattern')">
+            Invalid.
+          </small>
+        </div> -->
+      </div>
+
+      <div class="field col-4">
+        <label for="participantsEstimation">Participants Estimation *</label>
+        <input pInputText id="participantsEstimation" formControlName="participantsEstimation" placeholder="participantsEstimation" required />
+        <!-- <div *ngIf="(teacherForm.get('phone').invalid && teacherForm.get('phone').dirty)">
+          <small class="ng-dirty ng-invalid" *ngIf="teacherForm.get('phone').hasError('required')">
+            Obligatory.
+          </small>
+          <small class="ng-dirty ng-invalid" *ngIf="teacherForm.get('phone').hasError('pattern')">
+            Invalid.
+          </small>
+        </div> -->
+      </div>
+      
+    </form>
+    </ng-template>
+    <ng-template pTemplate="footer">
+        <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
+        <button pButton pRipple label="Save" [disabled]="eventForm.invalid" icon="pi pi-check" class="p-button-text"
+      (click)="saveEvent()"></button>
+    </ng-template>
+  </p-dialog>
+
+  <p-dialog [(visible)]="deleteEventDialog" header="Confirm" [modal]="true" [style]="{width:'40%'}">
+    <div class="flex align-items-center justify-content-center">
+      <i class="pi pi-exclamation-triangle mr-3" style="font-size: 2rem"></i>
+      <span *ngIf="event">Are you sure you want to delete <b>{{event?.title }}</b>?</span>
+    </div>
+    <ng-template pTemplate="footer">
+      <button pButton pRipple icon="pi pi-times" class="p-button-text" label="No"
+        (click)="deleteEventDialog = false"></button>
+      <button pButton pRipple icon="pi pi-check" class="p-button-text" label="Yes" (click)="confirmDelete()"></button>
+    </ng-template>
+  </p-dialog>
+  
+  <!--------delete selection dialog------- -->
+  <p-dialog [(visible)]="deleteEventsDialog" header="Confirm" [modal]="true" [style]="{width:'40%'}">
+    <div class="flex align-items-center justify-content-center">
+      <i class="pi pi-exclamation-triangle mr-3" style="font-size: 2rem"></i>
+      <span>Are you sure you want to delete the selected events?</span>
+    </div>
+    <ng-template pTemplate="footer">
+      <button pButton pRipple icon="pi pi-times" class="p-button-text" label="No"
+        (click)="deleteEventsDialog = false"></button>
+      <button pButton pRipple icon="pi pi-check" class="p-button-text" label="Yes" (click)="confirmDeleteSelected()"></button>
+    </ng-template>
+  </p-dialog>
