--- a/src/app/components/auth/registration/registration.component.html
+++ b/src/app/components/auth/registration/registration.component.html
@@ -106,7 +106,7 @@
                                         <ng-template pTemplate="emptymessage">
                                             <tr style="width:100%; min-width:100%;">
                                                 <td class="text-center" style="width:100%; min-width:100%;">
-                                                    <div class="flex justify-content-center text-center">No Available Coordinator.</div>
+                                                    <div class="flex justify-content-center text-center">No available teachers.</div>
                                                 </td>
                                             </tr>
                                           </ng-template>
