--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -25,7 +25,7 @@
                     <div class="text-900 font-medium text-xl">{{totalEvents}}</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-blue-100 border-round" [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
-                    <i class="pi pi-shopping-cart text-blue-500 text-xl"></i>
+                    <i class="pi pi-calendar text-blue-500 text-xl"></i>
                 </div>
             </div>
             <span class="text-green-500 font-medium">{{totalApprovedEvents}} </span>
@@ -42,7 +42,7 @@
                     <div class="text-900 font-medium text-xl">{{totalTeachers}}</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-cyan-100 border-round" [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
-                    <i class="pi pi-inbox text-cyan-500 text-xl"></i>
+                    <i class="pi pi-briefcase text-cyan-500 text-xl"></i>
                 </div>
             </div>
             <span class="text-green-500 font-medium">{{totalActiveTeachers}} </span>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="mt-2 md:mt-0 flex align-items-center">
                     <div class="badges">
-                        <p-badge [value]="club?.events.length" size="large" severity="success" styleClass="mr-2"></p-badge>
+                        <p-badge [value]="club?.events?.length" size="large" severity="success" styleClass="mr-2"></p-badge>
                     </div>
                 </div>
             </li>
