--- a/src/app/components/event-request/event-request.component.html
+++ b/src/app/components/event-request/event-request.component.html
@@ -1,6 +1,5 @@
 <p-toast></p-toast>
 <div class="card">
-    <h5>Default</h5>
     <p-tabView>
         <p-tabPanel header="Requests" leftIcon="pi pi-inbox">
             
@@ -10,7 +9,7 @@
                  selectionMode="multiple" [rowHover]="true" dataKey="id">
                 <ng-template pTemplate="caption">
                   <div class="flex flex-column md:flex-row md:justify-content-between md:align-items-center">
-                    <h5 class="m-0">Rejected Events</h5>
+                    <h5 class="m-0">Requested Events</h5>
                     <span class="block mt-2 md:mt-0 p-input-icon-left">
                       <i class="pi pi-search"></i>
                       <input pInputText Item="text" (input)="dt.filterGlobal($event.target.value, 'contains')"
